@@ -26,6 +26,7 @@ Contributors:
   Christophe D. <stophe72.d@gmail.com> : non-rectangular borders
   Benoit Averty : taskbar enhancements
   Justin Jacobs : tint2conf fixes
+  Oskari Rauta : separator plugin
 
 Translations:
   Bosnian:
